➕ add close button, style h1
Signed-off-by: Andreas Müller <mail@devmount.de>

--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -2,10 +2,16 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-
 <div id="amount-modal" class="modal">
-<h1>{{ _('Pay What You Want') }}</h1>
-<p>{{ _('Thunderbird is independent, free, and open source software sustained by your donations. Help us keep the project alive!') }}</p>
+  <div id="close-modal">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <line x1="18" y1="6" x2="6" y2="18" />
+      <line x1="6" y1="6" x2="18" y2="18" />
+    </svg>
+  </div>
+  <h1>{{ _('Pay What You Want') }}</h1>
+  <p>{{ _('Thunderbird is independent, free, and open source software sustained by your donations. Help us keep the project alive!') }}</p>
   <form action="">
   {% if LANG in settings.LOCALE_CURRENCIES %}
     {% set this_currency = settings.LOCALE_CURRENCIES[LANG] %}
@@ -16,17 +22,17 @@
     <p>Select an amount:</p>
     <select name="currency-switcher-currency" id="id_currency-switcher-currency">
     {% for currency, vals in settings.CURRENCIES | dictsort %}
-      <option value="{{ currency }}" {% if currency == this_currency %}selected{% endif %}>{{ currency.upper() }}   {{ vals.symbol.decode('utf-8') }}</option>
+      <option value="{{ currency }}" {% if currency == this_currency %}selected{% endif %}>{{ currency.upper() }}   {{ vals.symbol }}</option>
     {% endfor %}
     </select>
     <input type="radio" id="amt1" name="amount" value="{{ this_curdata.presets[0] }}">
-    <label for="amt1">{{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[0] }}</label><br>
+    <label for="amt1">{{ this_curdata.symbol }}{{ this_curdata.presets[0] }}</label><br>
     <input type="radio" id="amt2" name="amount" value="{{ this_curdata.default }}" checked>
-    <label for="amt2">{{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.default }}</label><br>
+    <label for="amt2">{{ this_curdata.symbol }}{{ this_curdata.default }}</label><br>
     <input type="radio" id="amt3" name="amount" value="{{ this_curdata.presets[2] }}">
-    <label for="amt3">{{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[2] }}</label><br>
+    <label for="amt3">{{ this_curdata.symbol }}{{ this_curdata.presets[2] }}</label><br>
     <input type="radio" id="amt4" name="amount" value="{{ this_curdata.presets[3] }}">
-    <label for="amt4">{{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[3] }}</label><br><br>
+    <label for="amt4">{{ this_curdata.symbol }}{{ this_curdata.presets[3] }}</label><br><br>
     <input type="radio" name="amount" value="">{{ _('Other') }}<input type="text" name="amount" />
     <button id="amount-submit">{{ _('Donate & Download') }}</button>
     <button id="amount-cancel">{{ _('No Thanks; Close & Download') }}</button>
