--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -1,18 +1,49 @@
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 .modal {
-    width:50%;
-    margin-left:auto;
-    margin-right:auto;
-    padding: 5px;
-    border: thin #000 solid;
-    background-color:#fff;
-    z-index:3; /* places the modal dialog on top of everything else */
-    position:fixed;
-    top:25%;
-    left:25%;
-    display:none;
+    width: 100%;
+    max-width: 640px;
+    border-radius: 5px;
+    box-shadow: 0 5px 15px -10px rgb(0 0 0 / 60%), 0 0 3px rgb(0 0 0 / 10%);
+    background-color: #fff;
+    z-index: 3; /* places the modal dialog on top of everything else */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+
+    #close-modal {
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        padding: .25rem;
+        margin: .5rem;
+        cursor: pointer;
+
+        svg {
+            height: 20px;
+            width: 20px;
+            stroke-width: 2.5;
+            stroke: #bebebe;
+            fill: none;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+        &:hover svg {
+            stroke: #000;
+        }
+    }
+
+    h1 {
+        color: #245cad;
+        text-align: center;
+        font-size: 3em;
+        font-weight: 300;
+    }
 }
 
 #modal-overlay {
