➕ finish donation form mockup styling
Signed-off-by: Andreas Müller <mail@devmount.de>

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -15,7 +15,6 @@
   black-lightest: #45454B;
   grey-light: #f0f0f0;
   grey-lighter: #fdfdfd;
-  blue-dark: #36385A;
   orange: #ff9500;
   blue-lightest: #B2D9FF;
   blue: #0080FF;
@@ -111,7 +110,7 @@
   max-w-md: 28rem;
   max-w-lg: 32rem;
   max-w-xl: 36rem;
-  // max-w-2xl: 42rem;
+  max-w-2xl: 42rem;
   max-w-3xl: 48rem;
   max-w-4xl: 56rem;
   max-w-5xl: 64rem;
