--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -9,22 +9,24 @@
 {% endif %}
 {% set this_curdata = settings.CURRENCIES[this_currency] %}
 
-<div id="amount-modal" class="modal">
-  <div id="close-modal">
+<div id="amount-modal" class="modal rounded max-w-2xl shadow-lg bg-white text-black-lighter fixed">
+  <div id="close-modal" class="absolute p-1 m-2">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <line x1="18" y1="6" x2="6" y2="18" />
       <line x1="6" y1="6" x2="18" y2="18" />
     </svg>
   </div>
-  <h1>{{ _('Pay What You Want') }}</h1>
+  <h1 class="text-blue-dark text-center font-4xl font-light">
+    {{ _('Pay What You Want') }}
+  </h1>
   <form action="">
-    <section class="description">
+    <section class="description text-center">
       <p>{{ _('Thunderbird is independent, free, and Open Source software sustained by your donations. Help us keep the project alive!') }}</p>
     </section>
     <section class="amount">
-      <div class="d-row space-between">
-        <label>{{ _('Select an amount') }}</label>
+      <div class="flex justify-between items-center">
+        <label class="uppercase font-sm">{{ _('Select an amount') }}</label>
         <label>
           {{ _('Currency') }}
           <select name="currency-switcher-currency" id="id_currency-switcher-currency">
@@ -34,41 +36,74 @@
           </select>
         </label>
       </div>
-      <div class="amount-selection d-row gap-1">
-        <label>
-          <input type="radio" name="amount" value="{{ this_curdata.presets[0] }}">
+      <div id="amount-selection" class="amount-selection flex flex-wrap mt-3">
+        <label class="flex items-center shadow-md mr-4 mb-2">
+          <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[0] }}">
           {{ this_curdata.symbol }}{{ this_curdata.presets[0] }}
         </label>
-        <label>
-          <input type="radio" name="amount" value="{{ this_curdata.default }}" checked>
+        <label class="flex items-center shadow-md mr-4 mb-2 active">
+          <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.default }}" checked>
           {{ this_curdata.symbol }}{{ this_curdata.default }}
         </label>
-        <label>
-          <input type="radio" name="amount" value="{{ this_curdata.presets[2] }}">
+        <label class="flex items-center shadow-md mr-4 mb-2">
+          <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[2] }}">
           {{ this_curdata.symbol }}{{ this_curdata.presets[2] }}
         </label>
-        <label>
-          <input type="radio" name="amount" value="{{ this_curdata.presets[3] }}">
+        <label class="flex items-center shadow-md mr-4 mb-2">
+          <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[3] }}">
           {{ this_curdata.symbol }}{{ this_curdata.presets[3] }}
         </label>
-        <label>
-          <input type="radio" name="amount" value="">
-          {{ _('Other') }}
-          <input type="text" name="amount" />
+        <label class="flex flex-grow items-center shadow-md mb-2">
+          <input id="amount-other-selection" class="mr-3" type="radio" name="amount" value="0">
+          <input id="amount-other" type="number" name="other" placeholder="{{ _('Other amount') }}" min="1" step="1" />
         </label>
       </div>
     </section>
-    <section class="actions">
-      <button id="amount-submit">{{ _('Donate & Download') }}</button>
-      <button id="amount-cancel">{{ _('No Thanks, Download Now!') }}</button>
+    <section class="flex justify-center mt-6 mb-6">
+      <button class="btn-body mr-2" id="amount-submit">
+        {{ _('Donate & Download') }}
+        <span>
+          <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g id="UI" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
+              <path d="M6.91574413,5.89284986 C6.91574413,5.97767139 6.87333336,6.07309561 6.80971722,6.13671176 L1.86886311,11.0775659 C1.80524696,11.141182 1.70982274,11.1835928 1.62500121,11.1835928 C1.54017968,11.1835928 1.44475546,11.141182 1.38113932,11.0775659 L0.851004755,10.5474313 C0.787388608,10.4838152 0.744977843,10.3989936 0.744977843,10.3035694 C0.744977843,10.2187479 0.787388608,10.1233237 0.851004755,10.0597075 L5.0178624,5.89284986 L0.851004755,1.72599222 C0.787388608,1.66237607 0.744977843,1.56695185 0.744977843,1.48213032 C0.744977843,1.39730879 0.787388608,1.30188457 0.851004755,1.23826842 L1.38113932,0.70813386 C1.44475546,0.644517713 1.54017968,0.602106948 1.62500121,0.602106948 C1.70982274,0.602106948 1.80524696,0.644517713 1.86886311,0.70813386 L6.80971722,5.64898796 C6.87333336,5.71260411 6.91574413,5.80802833 6.91574413,5.89284986 Z"></path>
+            </g>
+          </svg>
+        </span>
+      </button>
+      <button class="btn-body btn-secondary" id="amount-cancel">
+        {{ _('No Thanks, Download Now!') }}
+        <span>
+          <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g id="UI" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
+              <path d="M6.91574413,5.89284986 C6.91574413,5.97767139 6.87333336,6.07309561 6.80971722,6.13671176 L1.86886311,11.0775659 C1.80524696,11.141182 1.70982274,11.1835928 1.62500121,11.1835928 C1.54017968,11.1835928 1.44475546,11.141182 1.38113932,11.0775659 L0.851004755,10.5474313 C0.787388608,10.4838152 0.744977843,10.3989936 0.744977843,10.3035694 C0.744977843,10.2187479 0.787388608,10.1233237 0.851004755,10.0597075 L5.0178624,5.89284986 L0.851004755,1.72599222 C0.787388608,1.66237607 0.744977843,1.56695185 0.744977843,1.48213032 C0.744977843,1.39730879 0.787388608,1.30188457 0.851004755,1.23826842 L1.38113932,0.70813386 C1.44475546,0.644517713 1.54017968,0.602106948 1.62500121,0.602106948 C1.70982274,0.602106948 1.80524696,0.644517713 1.86886311,0.70813386 L6.80971722,5.64898796 C6.87333336,5.71260411 6.91574413,5.80802833 6.91574413,5.89284986 Z"></path>
+            </g>
+          </svg>
+        </span>
+      </button>
     </section>
   </form>
-  <footer>
-    <ul>
-      <li><a href="">{{ _('Secure') }}</a></li>
-      <li><a href="">{{ _('Privacy Policy') }}</a></li>
-      <li><a href="">{{ _('Other ways to donate') }}</a></li>
-      <li><a href="">{{ _('FAQ') }}</a></li>
+  <footer class="w-4/5 border-0 border-t border-solid border-grey-light p-6">
+    <ul class="flex justify-center uppercase list-none font-xs p-0 m-0">
+      <li class="mr-4">
+        <a class="text-black-lightest no-underline" href="">
+          {{ _('Secure') }}
+        </a>
+      </li>
+      <li class="mr-4">
+        <a class="text-black-lightest no-underline" href="">
+          {{ _('Privacy Policy') }}
+        </a>
+      </li>
+      <li class="mr-4">
+        <a class="text-black-lightest no-underline" href="">
+          {{ _('Other ways to donate') }}
+        </a>
+      </li>
+      <li>
+        <a class="text-black-lightest no-underline" href="">
+          {{ _('FAQ') }}
+        </a>
+      </li>
     </ul>
   </footer>
 </div>
