🔨 adapt to utility classes, make python2 compatible
Signed-off-by: Andreas Müller <mail@devmount.de>

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -13,11 +13,13 @@
   black-light: #212123;
   black-lighter: #34343A;
   black-lightest: #45454B;
+  grey: #ccc;
   grey-light: #f0f0f0;
   grey-lighter: #fdfdfd;
   orange: #ff9500;
   blue-lightest: #B2D9FF;
   blue: #0080FF;
+  blue-25: rgba(0, 128, 255, 0.25);
   blue-dark: #245CAD;
   blue-darker: #36385A;
   green: #058B00;
@@ -50,7 +52,7 @@
 * Sizing
 *--------------------------*/
 @widths: {
-  w-auto:auto;
+  w-auto: auto;
   // w-px:1px;
   // w-0: 0;
   // w-1: 0.25rem;
@@ -127,7 +129,7 @@
   // h-5: 1.25rem;
   h-6: 1.5rem;
   // h-8: 2rem;
-  // h-10: 2.5rem;
+  h-10: 2.5rem;
   // h-12: 3rem;
   // h-16: 4rem;
   // h-20: 5rem;
@@ -240,9 +242,9 @@
 *--------------------------*/
 @z-index: {
   // z-0: 0;
-  // z-10: 10;
-  // z-20: 20;
-  // z-30: 30;
+  z-10: 10;
+  z-20: 20;
+  z-30: 30;
   // z-40: 40;
   // z-50: 50;
 }
