--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -9,9 +9,9 @@
 {% endif %}
 {% set this_curdata = settings.CURRENCIES[this_currency] %}
 
-<div id="amount-modal" class="modal rounded max-w-2xl shadow-lg bg-white text-black-lighter fixed">
-  <div id="close-modal" class="absolute p-1 m-2">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+<div id="amount-modal" class="modal rounded w-full max-w-2xl shadow-lg bg-white text-black-lighter fixed z-30 mt-0 mx-auto pin-x hidden">
+  <div id="close-modal" class="absolute p-1 m-2 z-10 pin-t pin-r">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <line x1="18" y1="6" x2="6" y2="18" />
       <line x1="6" y1="6" x2="18" y2="18" />
@@ -21,39 +21,39 @@
     {{ _('Pay What You Want') }}
   </h1>
   <form action="">
-    <section class="description text-center">
+    <section class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
       <p>{{ _('Thunderbird is independent, free, and Open Source software sustained by your donations. Help us keep the project alive!') }}</p>
     </section>
-    <section class="amount">
+    <section class="bg-grey-light pt-4 pl-6 pb-4 pr-6">
       <div class="flex justify-between items-center">
         <label class="uppercase font-sm">{{ _('Select an amount') }}</label>
         <label>
           {{ _('Currency') }}
-          <select name="currency-switcher-currency" id="id_currency-switcher-currency">
+          <select id="id_currency-switcher" class="inline-block w-24 bg-white p-1 border border-solid border-grey" name="currency-switcher">
             {% for currency, vals in settings.CURRENCIES | dictsort %}
-            <option value="{{ currency }}" {% if currency == this_currency %}selected{% endif %}>{{ currency.upper() }}   {{ vals.symbol }}</option>
+            <option value="{{ currency }}" {% if currency == this_currency %}selected{% endif %}>{{ currency.upper() }}   {{ vals.symbol.decode('utf-8') }}</option>
             {% endfor %}
           </select>
         </label>
       </div>
       <div id="amount-selection" class="amount-selection flex flex-wrap mt-3">
-        <label class="flex items-center shadow-md mr-4 mb-2">
+        <label class="flex items-center shadow-md mb-2 mr-4">
           <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[0] }}">
-          {{ this_curdata.symbol }}{{ this_curdata.presets[0] }}
+          {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[0] }}
         </label>
-        <label class="flex items-center shadow-md mr-4 mb-2 active">
+        <label class="flex items-center shadow-md mb-2 mr-4 active">
           <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.default }}" checked>
-          {{ this_curdata.symbol }}{{ this_curdata.default }}
+          {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.default }}
         </label>
-        <label class="flex items-center shadow-md mr-4 mb-2">
+        <label class="flex items-center shadow-md mb-2 mr-4">
           <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[2] }}">
-          {{ this_curdata.symbol }}{{ this_curdata.presets[2] }}
+          {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[2] }}
         </label>
-        <label class="flex items-center shadow-md mr-4 mb-2">
+        <label class="flex items-center shadow-md mb-2 mr-4">
           <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[3] }}">
-          {{ this_curdata.symbol }}{{ this_curdata.presets[3] }}
+          {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[3] }}
         </label>
-        <label class="flex flex-grow items-center shadow-md mb-2">
+        <label class="flex items-center shadow-md mb-2 flex-grow">
           <input id="amount-other-selection" class="mr-3" type="radio" name="amount" value="0">
           <input id="amount-other" type="number" name="other" placeholder="{{ _('Other amount') }}" min="1" step="1" />
         </label>
@@ -82,7 +82,7 @@
       </button>
     </section>
   </form>
-  <footer class="w-4/5 border-0 border-t border-solid border-grey-light p-6">
+  <footer class="w-4/5 mx-auto border-0 border-t border-solid border-grey-light p-6">
     <ul class="flex justify-center uppercase list-none font-xs p-0 m-0">
       <li class="mr-4">
         <a class="text-black-lightest no-underline" href="">
@@ -114,4 +114,4 @@
   <button id="submit-button">{{ _('Submit payment') }}</button>
 </div>
 
-<div id="modal-overlay" tabindex="-1"></div>
+<div id="modal-overlay" class="fixed pin-t pin-l m-0 p-0 w-full h-full z-20 bg-black opacity-50 hidden" tabindex="-1"></div>
