Add Mastodon link to website footer.

--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -41,11 +41,18 @@
             @mozthunderbird
           </a>
         </li>
-        <li>
+        <li class="mr-4">
           <a class="social-link font-semibold" href="https://www.facebook.com/Thunderbird/" data-link-type="footer"
             data-link-name="Facebook (Thunderbird)">
             <span>{{ svg('facebook') }}</span>
             {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li>
+          <a class="social-link font-semibold" title="Follow @thunderbird@mastodon.online on Mastodon"
+            href="https://mastodon.online/@thunderbird" data-link-type="footer" data-link-name="Mastodon (Thunderbird)" rel="me">
+            <span>{{ svg('mastodon') }}</span>
+            @thunderbird@mastodon.online
           </a>
         </li>
       </ul>
