➕ implement loading indication
Signed-off-by: Andreas Müller <mail@devmount.de>

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -8,6 +8,7 @@
 @colors: {
   transparent: transparent;
   white: #fff;
+  white-50: rgba(255, 255, 255, 0.5);
   black: #000;
   black-25: rgba(0, 0, 0, 0.25);
   black-light: #212123;
@@ -131,7 +132,7 @@
   // h-8: 2rem;
   h-10: 2.5rem;
   // h-12: 3rem;
-  // h-16: 4rem;
+  h-16: 4rem;
   // h-20: 5rem;
   // h-24: 6rem;
   // h-32: 8rem;
@@ -246,7 +247,7 @@
   z-10: 10;
   z-20: 20;
   z-30: 30;
-  // z-40: 40;
+  z-40: 40;
   // z-50: 50;
 }
 
