remove extra div

--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -23,7 +23,7 @@ button {
 }
 
 .donation-appeal {
-  &:extend(.flex, .items-center, .max-w-lg, .bg-white, .p-4, .rounded, .shadow, .text-black-light, .no-underline);
+  &:extend(.flex, .items-center, .mb-20, .max-w-lg, .bg-white, .p-4, .rounded, .shadow, .text-black-light, .no-underline);
 
   .text-donation {
     color: #f99298;
