Update donate cta in 102 What's New page

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -58,7 +58,7 @@
   w-2: 0.5rem;
   w-3: 0.75rem;
   w-4: 1rem;
-  // w-5: 1.25rem;
+  w-5: 1.25rem;
   w-6: 1.5rem;
   // w-8: 2rem;
   // w-10: 2.5rem;
