hide header nav on whats new page

--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -14,7 +14,7 @@
 
 {% block site_header %}
   <header id="masthead" class="bg-no-repeat bg-cover bg-top flex flex-col{% if active_page == 'index' %} bg-header{% else %} bg-header-page{% endif %}">
-    <section class="flex justify-between items-center p-6 flex-wrap">
+    <section class="flex justify-between items-center p-6 flex-wrap {% if active_page == 'whatsnew' %} hidden{% endif %}">
       {% block site_header_logo %}
         <h2 class="mt-0 mb-0">
           <a href="{{ url('thunderbird.index') }}" class="block w-48 lg:w-56" title="{{ _('Thunderbird') }}" alt="{{ _('Thunderbird Vector Wordmark') }}">
