Update donate CTA in 102 What's New page. (#326)
* hide header nav on whats new page

* update donate url

* update what's new page layout

Co-authored-by: Alessandro <castellani.ale@gmail.com>

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -13,6 +13,7 @@
   black-light: #212123;
   black-lighter: #34343A;
   black-lightest: #45454B;
+  grey: #f9f9f9;
   grey-light: #f0f0f0;
   grey-lighter: #fdfdfd;
   blue-dark: #36385A;
@@ -58,7 +59,7 @@
   w-2: 0.5rem;
   w-3: 0.75rem;
   w-4: 1rem;
-  // w-5: 1.25rem;
+  w-5: 1.25rem;
   w-6: 1.5rem;
   // w-8: 2rem;
   // w-10: 2.5rem;
@@ -111,7 +112,7 @@
   max-w-md: 28rem;
   max-w-lg: 32rem;
   max-w-xl: 36rem;
-  // max-w-2xl: 42rem;
+  max-w-2xl: 42rem;
   max-w-3xl: 48rem;
   max-w-4xl: 56rem;
   max-w-5xl: 64rem;
