Add Thunderbird's YouTube and LinkedIn urls to the footer/social media section.

--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -55,6 +55,20 @@
             @thunderbird@mastodon.online
           </a>
         </li>
+        <li>
+          <a class="social-link font-semibold" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@thunderbird3665') }}"
+            href="https://www.youtube.com/channel/UCuMTCmnwZPiXXVIy_TW6Bnw" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
+            <span>{{ svg('youtube') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li>
+          <a class="social-link font-semibold" title="{{ _('Follow %(linkedin)s on LinkedIn')|format(linkedin='thunderbird-email')}}"
+            href="https://www.linkedin.com/company/thunderbird-email/" data-link-type="footer" data-link-name="LinkedIn (Thunderbird)" rel="me">
+            <span>{{ svg('linkedin') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
       </ul>
       <aside class="mt-2">
         {% include '_includes/lang_switcher.html' %}
